Minor updates to the theoretical docs

--- a/doc/theoretical_results.lyx
+++ b/doc/theoretical_results.lyx
@@ -293,145 +293,6 @@ C=\frac{1}{2}\log_{2}\left(1+\left(6.33\sigma\right)^{2}\right)
 \end_layout
 
 \begin_layout Part
-Setting the number of pulses for PVQ
-\end_layout
-
-\begin_layout Standard
-Fig.
- XX numericaly simulates the distortion caused by a PVQ quantizer of 
-\begin_inset Formula $K$
-\end_inset
-
- pulses in 
-\begin_inset Formula $N$
-\end_inset
-
- dimensions for Laplace-distributed input scaled to a unit sphere (no gain
- quantization).
- According to this experiment, the high-rate distortion of a unit-norm PVQ
- codebook is equal to 
-\begin_inset Formula 
-\begin{equation}
-D_{pvq}=\frac{N^{2}}{24K^{2}}\ .\label{eq:pvq_experiment_fit}
-\end{equation}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-\begin_inset Float figure
-wide false
-sideways false
-status open
-
-\begin_layout Plain Layout
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-
-\backslash
-centering{
-\end_layout
-
-\end_inset
-
-
-\begin_inset Graphics
-	filename pvq_distortion.png
-	lyxscale 50
-	width 60col%
-
-\end_inset
-
-
-\begin_inset ERT
-status open
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\begin_inset Caption
-
-\begin_layout Plain Layout
-PVQ distortion as a function of the number of pulses
-\begin_inset CommandInset label
-LatexCommand label
-name "fig:PVQ-distortion-K"
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-The high-rate distortion of a scalar quantizer of unit step size is equal
- to 
-\begin_inset Formula $D_{s}=1/12$
-\end_inset
-
- and since we would like a uniformly distributed codebook, the distortion
- of the PVQ quantizer along the 
-\begin_inset Formula $N-1$
-\end_inset
-
- remaining dimensions should be the same as the scalar-quantized gain
-\begin_inset Formula 
-\begin{equation}
-D_{pvq}=\left(N-1\right)D_{s}=\frac{N-1}{12}\ .\label{eq:pvq_uniform}
-\end{equation}
-
-\end_inset
-
-Combining 
-\begin_inset CommandInset ref
-LatexCommand eqref
-reference "eq:pvq_experiment_fit"
-
-\end_inset
-
- with 
-\begin_inset CommandInset ref
-LatexCommand eqref
-reference "eq:pvq_uniform"
-
-\end_inset
-
-, we get
-\begin_inset Formula 
-\begin{align*}
-g^{2}\frac{N^{2}}{24K^{2}} & =\frac{N-1}{12}\\
-K & =g\sqrt{\frac{N^{2}}{2\left(N-1\right)}}\\
-K & \approx g\sqrt{N/2}\ .
-\end{align*}
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Part
 PVQ Distortion
 \end_layout
 
@@ -683,7 +544,7 @@ where the columns of
  is
 \begin_inset Formula 
 \begin{align*}
-\mathbf{y} & =\mathbf{H}\mathbf{S}^{-1}\left(\mathbf{S}\mathbf{G}\mathbf{x}+\mathbf{n}\right)\\
+\mathbf{y} & =\mathbf{H}\mathbf{S}^{-1}\left(\mathbf{S}\mathbf{G}^{T}\mathbf{x}+\mathbf{n}\right)\\
  & =\mathbf{x}+\mathbf{H}\mathbf{S}^{-1}\mathbf{n}
 \end{align*}
 
