--- a/doc/intra_prob.lyx
+++ b/doc/intra_prob.lyx
@@ -1,5 +1,5 @@
-#LyX 2.0 created this file. For more info see http://www.lyx.org/
-\lyxformat 413
+#LyX 2.1 created this file. For more info see http://www.lyx.org/
+\lyxformat 474
 \begin_document
 \begin_header
 \textclass article
@@ -12,13 +12,13 @@
 \font_roman default
 \font_sans default
 \font_typewriter default
+\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
 \font_sf_scale 100
 \font_tt_scale 100
-
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -29,15 +29,24 @@
 \use_hyperref false
 \papersize default
 \use_geometry false
-\use_amsmath 1
-\use_esint 1
-\use_mhchem 1
-\use_mathdots 1
+\use_package amsmath 1
+\use_package amssymb 1
+\use_package cancel 1
+\use_package esint 1
+\use_package mathdots 1
+\use_package mathtools 1
+\use_package mhchem 1
+\use_package stackrel 1
+\use_package stmaryrd 1
+\use_package undertilde 1
 \cite_engine basic
+\cite_engine_type default
+\biblio_style plain
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
 \suppress_date false
+\justification true
 \use_refstyle 1
 \index Index
 \shortcut idx
@@ -217,7 +226,7 @@ amplify
  probabilities that are close to unity:
 \begin_inset Formula 
 \begin{equation}
-p_{k}^{'}=p_{k}\cdot\frac{1-p_{k}}{\sum_{j}p_{j}-p_{k}}\,,\label{eq:weighted-renorm}
+p_{k}^{'}=p_{k}\cdot\frac{1-p_{k}}{\left(\sum_{j}p_{j}\right)-p_{k}}\,,\label{eq:weighted-renorm}
 \end{equation}
 
 \end_inset
