--- a/doc/pvq_encoding.lyx
+++ b/doc/pvq_encoding.lyx
@@ -1,5 +1,5 @@
-#LyX 2.0 created this file. For more info see http://www.lyx.org/
-\lyxformat 413
+#LyX 2.1 created this file. For more info see http://www.lyx.org/
+\lyxformat 474
 \begin_document
 \begin_header
 \textclass article
@@ -12,13 +12,13 @@
 \font_roman default
 \font_sans default
 \font_typewriter default
+\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
 \font_sf_scale 100
 \font_tt_scale 100
-
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -28,15 +28,24 @@
 \use_hyperref false
 \papersize default
 \use_geometry false
-\use_amsmath 1
-\use_esint 1
-\use_mhchem 1
-\use_mathdots 1
+\use_package amsmath 1
+\use_package amssymb 1
+\use_package cancel 0
+\use_package esint 1
+\use_package mathdots 1
+\use_package mathtools 0
+\use_package mhchem 1
+\use_package stackrel 0
+\use_package stmaryrd 0
+\use_package undertilde 0
 \cite_engine basic
+\cite_engine_type default
+\biblio_style plain
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
 \suppress_date false
+\justification true
 \use_refstyle 1
 \index Index
 \shortcut idx
@@ -81,9 +90,9 @@ on.
 
 \begin_layout Standard
 \begin_inset Formula 
-\[
+\begin{equation}
 S\left(N,K\right)=\left\{ \mathbf{y}\in\mathbb{Z^{N}}:\sum_{i=0}^{N-1}\left|y_{i}\right|=K\right\} \ ,
-\]
+\end{equation}
 
 \end_inset
 
@@ -448,6 +457,37 @@ The process can be applied recursively until
 \end_inset
 
 .
+ Similar to a limear regression, we have 
+\begin_inset Formula 
+\begin{equation}
+\alpha=\frac{S_{y}}{S_{E}}\ ,
+\end{equation}
+
+\end_inset
+
+where for new vector, we update 
+\begin_inset Formula $S_{y}$
+\end_inset
+
+ and 
+\begin_inset Formula $S_{E}$
+\end_inset
+
+ as
+\begin_inset Formula 
+\begin{align}
+S_{y} & \leftarrow\left(1-\eta\right)S_{y}+\eta\sum\left|y_{i}\right|\\
+S_{E} & \leftarrow\left(1-\eta\right)S_{E}+\eta\sum\left(K^{\left(i\right)}/N^{\left(i\right)}\right)\ ,
+\end{align}
+
+\end_inset
+
+where 
+\begin_inset Formula $\eta$
+\end_inset
+
+ controls the adaptation rate.
+ 
 \end_layout
 
 \begin_layout Standard
@@ -500,12 +540,12 @@ reference "sub:Coefficient-model"
 
 , as a truncated exponential distribution
 \begin_inset Formula 
-\[
+\begin{equation}
 q\left(n\right)=C_{1}\left\{ \begin{array}{ll}
 r^{-n}\quad & ,\ n<N\\
 0 & ,\ n\geq N
 \end{array}\right.\ ,
-\]
+\end{equation}
 
 \end_inset
 
@@ -550,9 +590,9 @@ The relationship between
 
  is given by
 \begin_inset Formula 
-\[
+\begin{equation}
 \sigma_{n}=\frac{r^{N}-Nr+N-1}{r^{N-1}\left(1-r\right)^{N}}\ ,
-\]
+\end{equation}
 
 \end_inset
 
@@ -579,9 +619,9 @@ so computing
  is not easy.
  We use the approximation 
 \begin_inset Formula 
-\[
+\begin{equation}
 r\approx\frac{\sigma_{n}}{1+\sigma_{n}}+\frac{8\sigma_{n}^{2}}{\left(N+1\right)\left(N-1\right)^{2}}\ .
-\]
+\end{equation}
 
 \end_inset
 
@@ -623,7 +663,52 @@ r^{-n} & ,\ 0<n<N\\
 
 \end_inset
 
+The 
+\begin_inset Formula $\beta$
+\end_inset
 
+ parameters is adapted in a similar way as the 
+\begin_inset Formula $\alpha$
+\end_inset
+
+ parameter in 
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "sub:Coefficient-model"
+
+\end_inset
+
+:
+\begin_inset Formula 
+\begin{equation}
+\beta=\frac{S_{p}}{S_{N}}\ ,
+\end{equation}
+
+\end_inset
+
+where for new vector, we update 
+\begin_inset Formula $S_{p}$
+\end_inset
+
+ and 
+\begin_inset Formula $S_{N}$
+\end_inset
+
+ as
+\begin_inset Formula 
+\begin{align}
+S_{p} & \leftarrow\left(1-\eta\right)S_{p}+\eta\sum n^{(i)}K^{(i)}\\
+S_{N} & \leftarrow\left(1-\eta\right)S_{N}+\eta\sum N^{\left(i\right)}\ ,
+\end{align}
+
+\end_inset
+
+where 
+\begin_inset Formula $\eta$
+\end_inset
+
+ controls the adaptation rate.
+ 
 \end_layout
 
 \begin_layout Subsection
