--- a/AUTHORS
+++ b/AUTHORS
@@ -1,17 +1,30 @@
 == Daala project contributors ==
 
+Josh Aas
 Ben Brittain
 Broos <brooss.teambb@gmail.com>
+Yushin Cho
+Thomas Daede
 Nick Desaulniers
+Sebastian Dröge
 Nathan E. Egge
 Ralph Giles
+Vittorio Giovara
+Philip Jägenstedt
 Cullen Jennings
+Sam Laane
+Ron Lee
+Tristan Matthews
 Gregory F. Maxwell
+Steinar Midtskogen
 Jack Moffitt
 Christopher "Monty" Montgomery
 Suhas Nandakumar
+Martin Olsson
 Eric Rescorla
 David Richards
+Felipe Rojo
 David Schleef
+Thomas Szymczak
 Timothy B. Terriberry
 Jean-Marc Valin
