--- a/AUTHORS
+++ b/AUTHORS
@@ -3,17 +3,22 @@
 Josh Aas
 Ben Brittain
 Broos <brooss.teambb@gmail.com>
+Derek Buitenhuis
 Yushin Cho
 Thomas Daede
 Nick Desaulniers
 Sebastian Dröge
 Nathan E. Egge
+Andreas Gal
 Ralph Giles
 Vittorio Giovara
 Philip Jägenstedt
 Cullen Jennings
+Basar Koc
 Sam Laane
 Ron Lee
+Brendan Long
+Guillaume Martres
 Tristan Matthews
 Gregory F. Maxwell
 Steinar Midtskogen
